# toyunda-player-rs

./: .gitignore  Cargo.toml  DEV-README.md  LICENSE-APACHE  LICENSE-MIT  README.md  bootstrap.py  build.py  build.rs
doc/: timer-guide-fr.md
src/: display.rs  display.rs.bk  displayer.rs  displayer.rs.bk  font.rs  init.rs  init.rs.bk  main.rs  mainloop.rs  subtitles.rs  subtitles.rs.bk  update_json.rs  utils.rs  utils.rs.bk
src/display/: displayer.rs  font.rs  frame.rs  misc.rs  mod.rs  text2d.rs  text_element.rs
src/mpv_plug/: mod.rs  mpv_cache.rs
src/overlay/: color.rs  display.rs  mod.rs  outline.rs  overlay_frame.rs  pos.rs  rect.rs  text_subunit.rs  text_unit.rs
src/sdl_displayer/: display_params.rs  displayer.rs  font.rs  mod.rs
src/subtitles/: load.rs  metainfo.rs  misc.rs  mod.rs  options.rs  pos.rs  sentence.rs  song_info.rs  sub.rs  syllable.rs
src/toyunda_player/: command.rs  editor.rs  error.rs  graphic_message.rs  log_messages.rs  manager.rs  mod.rs  options.rs  playing_state.rs  playlist.rs  startup_options.rs  state.rs  subtitle_loader.rs  time_info.rs  toyunda.rs  toyunda_history.rs  toyunda_mode.rs  video_meta.rs  yaml_meta.rs
tools/: ffmpeg_video_length.sh  normalize.sh  video_to_yaml.py  yaml_init.sh
web/: index.html  libs.sh  style.css  toyunda-manager.js
web/js/: toyunda-manager.js  utils.js
