[package]
name = "toyunda-player-rs"
version = "1.0.1"
license = "MIT/Apache-2.0"
authors = ["Cobrand <cobrandw@gmail.com>"]
build = "build.rs"

[dependencies]
mpv = "0.2"
sdl2_image = "0.25"
sdl2 = "0.25"
sdl2-sys = "0.25"
sdl2_ttf = "0.25"
log = "0.3"
clap = "2"

read_color = "0.1"

chrono = "0.2"
fern = "0.3"

serde = "0.8"
serde_json = "0.8"
serde_macros = "0.8"
serde_yaml = "0.4"

lazy_static = "0.2"

iron = "0.4"
router = "0.4"
staticfile = "0.3"
mount = "0.2"
bodyparser = "0.4"
