[package]
name = "toyunda-player-rs"
version = "1.0.1"
license = "MIT/Apache-2.0"
authors = ["Cobrand <cobrandw@gmail.com>"]
build = "build.rs"

[dependencies.sdl2]
git = "https://github.com/Cobrand/rust-sdl2.git"
default-features = false
features = ["image","ttf"]

[dependencies.sdl2-sys]
git = "https://github.com/Cobrand/rust-sdl2.git"

[dependencies]
mpv = "0.2"
log = "0.3"
clap = "2"

read_color = "0.1"

chrono = "0.2"
fern = "0.3"

serde = "0.8"
serde_json = "0.8"
serde_derive = "0.8"
serde_yaml = "0.4"

lazy_static = "0.2"

iron = "0.4"
router = "0.4"
staticfile = "0.3"
mount = "0.2"
bodyparser = "0.4"
