[package]
name = "toyunda-player-rs"
version = "1.0.1"
license = "MIT/Apache-2.0"
authors = ["Cobrand <cobrandw@gmail.com>"]
build = "build.rs"

[dependencies.sdl2]
version = "0.30"
default-features = false
features = ["image","ttf"]

[dependencies]
mpv = "0.2"
log = "0.3"
clap = "2"

read_color = "0.1"

chrono = "0.3"
fern = "0.3"

serde_derive = "1.0"
serde = "1.0"
serde_json = "1.0"
serde_yaml = "0.7"

lazy_static = "0.2"

iron = "0.5"
router = "0.5"
staticfile = "0.4"
mount = "0.3"
bodyparser = "0.7"
